# lapack

./: .gitignore  CMakeLists.txt  COPYING  Makefile  build_NDK_cmake.sh  build_android.sh  build_android_cmake.sh  build_x86.sh  build_x86_cmake.sh  make.inc  make.inc.NDK-x86  make.inc.armv7-a  make.inc.example  svn-to-git.txt  users.txt
BLAS/: CMakeLists.txt
BLAS/SRC/: CMakeLists.txt  Makefile  caxpy.f  ccopy.f  cdotc.f  cdotu.f  cgbmv.f  cgemm.f  cgemv.f  cgerc.f  cgeru.f  chbmv.f  chemm.f  chemv.f  cher.f  cher2.f  cher2k.f  cherk.f  chpmv.f  chpr.f  chpr2.f  crotg.f  cscal.f  csscal.f  cswap.f  csymm.f  csyr2k.f  csyrk.f  ctbmv.f  ctbsv.f  ctpmv.f  ctpsv.f  ctrmm.f  ctrmv.f  ctrsm.f  ctrsv.f  dasum.f  daxpy.f  dcabs1.f  dcopy.f  (+106 more)
BLAS/TESTING/: CMakeLists.txt
CBLAS/: CMakeLists.txt
INSTALL/: Makefile  dlamch.f  dlamchtst.f  dsecnd.f  dsecndtst.f  ilaver.f  lawn81.tex  lpk_gnumake.tar  lsame.f  lsametst.f  make.inc.ALPHA  make.inc.HPPA  make.inc.IRIX64  make.inc.LINUX  make.inc.O2K  make.inc.RS6K  make.inc.SGI5  make.inc.SUN4  make.inc.SUN4SOL2  make.inc.pghpf  second.f  secondtst.f  slamch.f  slamchtst.f  tstiee.f
LAPACKE/: CMakeLists.txt
SRC/: Makefile  cbdsqr.f  cgbbrd.f  cgbcon.f  cgbequ.f  cgbrfs.f  cgbsv.f  cgbsvx.f  cgbtf2.f  cgbtrf.f  cgbtrs.f  cgebak.f  cgebal.f  cgebd2.f  cgebrd.f  cgecon.f  cgeequ.f  cgees.f  cgeesx.f  cgeev.f  cgeevx.f  cgegs.f  cgegv.f  cgehd2.f  cgehrd.f  cgelq2.f  cgelqf.f  cgels.f  cgelsd.f  cgelss.f  cgelsx.f  cgelsy.f  cgeql2.f  cgeqlf.f  cgeqp3.f  cgeqpf.f  cgeqr2.f  cgeqrf.f  cgerfs.f  cgerq2.f  (+1319 more)
TESTING/: Makefile
(+2182 files in other folders)
